--- a/pacman/index.html
+++ b/pacman/index.html
@@ -1,49 +1,31 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <html lang="en-US" xmlns="http://www.w3.org/1999/html">
 <head>
-    <style>
-        #source {
-            width: 400px;
-            height: 600px;
-        }
-        div {
-            margin-left: 50px;
-        }
-    </style>
+    <link href="style.css" type="text/css" rel="stylesheet"/>
+    <script src="sendmodel.js" type="text/javascript"></script>
+    <script src="paint.js" type="text/javascript"></script>
+    <script src="documentReady.js" type="text/javascript"></script>
 
     <title>EMA Demonstrator</title>
 </head>
 <body>
-<div id="main">
-    <h2>Insert EmbeddedMontiarcCode here:</h2>
-    <p>package has to be "demonstrator", component name has to be Main</p>
-    <textarea id="source">package demonstrator;&#10;&#10;component Main {&#10;}</textarea>
-    </p>
-	<button id="submit" onclick="sendData()">Submit</button>
+<div class="container">
+    <div class="main">
+        <div class="instruction">
+            <h2>Insert EmbeddedMontiarcCode here:</h2>
+            <p>package has to be "demonstrator", component name has to be Main</p>
+        </div>
+        <div class="textarea">
+            <textarea id="source">package demonstrator;&#10;&#10;component Main {&#10;}</textarea>
+            <div class="submit">
+                <button id="submit">Submit</button>
+            </div>
+        </div>
+        <div class="picture">
+            <canvas id="canvas" width="800" height="600"></canvas>
+        </div>
 
-    <script type="text/javascript">
-        function sendData() {
-            var text = document.getElementById('source').value;
-
-            $.ajax({
-                type: "POST",
-                url: "137.226.168.11:80",
-                dataType: 'text',
-                data: 'text='+text,
-                success: function(msg) {
-                    alert(msg);
-                },
-                error: function(msg) {
-                    alert(msg);
-                }
-            });
-        }
-    </script>
-</div>
-<div id="picture">
-    <script type="text/javascript">
-        
-    </script>
+    </div>
 </div>
 </body>
 </html>
