--- a/selfdrivingcar/index.html
+++ b/selfdrivingcar/index.html
@@ -22,6 +22,7 @@
 			}
 			a { color: red }
 		</style>
+
 	</head>
 	
 	<body>
@@ -30,7 +31,7 @@
 			<button id="silver-material">Pure Chrome</button>
 			<button id="black-material">Black</button>
 			<button id="red-material">Red</button>
-			<button id="move"></button>
+			<button id="move">Start</button>
 		
 		<!--<button onClick="showGameOverScreen()" style="position: absolute; top:50%;" id="restart_trigger">Trigger</button>-->
 		<div style="display: none; position: absolute; top: 0; bottom: 0; left: 0; right: 0; background-color: #000000; opacity: 1;" id="close_layer">
@@ -40,13 +41,21 @@
 			</div>
 		</div>
 		</div>
-	
 		
 		<script src="build/three.js"></script>
 		<script src="js/OrbitControls.js"></script>
 		<script src="js/loaders/AssimpJSONLoader.js"></script>
 		<script src="js/Detector.js"></script>
 		<script src="js/libs/stats.min.js"></script>
+
+		<script src="simulator-ts/libs/require.js"></script>
+        <script type="text/javascript" src="out/bundle.js"></script>
+        <script type="text/javascript">
+            requirejs(['Simulator'], function(Simulator) {
+                console.log('starting application...');
+                window.simulator = Simulator;
+            });
+        </script>
 		
 		<script>	
 			if ( ! Detector.webgl ) {
@@ -70,7 +79,7 @@
 			};
 			
 			var onError = function ( xhr ) {
-			};			
+			};
 
 			// Global Car Variable
 			var currentCar = new THREE.Object3D();
@@ -803,7 +812,6 @@
 				setColor(yellowGlass, frontlights);
 			}
 			
-
 			// var t = 0;
 			function animate() {
 				requestAnimationFrame( animate );
@@ -818,37 +826,57 @@
 				stats.update();
 			}
 
-			var i = 0;
-			function move(){
-				setTimeout(testmove, 10);
-			}
+			// Run logic using Simulator class
+			setTimeout(function(){
+				
+			var simulator = new window.simulator.Simulator();
 
-			function testmove(){
-				setPosition(currentCar, 0, 0.2, i);
-			 	i=i+0.1;
-			 	setTimeout(move, 10);
+			//bind the function
+			var run = simulator.run;
+			var simulatorRun = run.bind(simulator);
+			
+			// execute simulation and recive data for moving
+			simulatorRun();
+
+			window.simulatorInstance = simulator; }, 10);
+
+			var time = 0;
+			var run = false;
+
+			function move(){
+
+				// init parametrs for next run
+				if (run) 
+					{
+						time = 0;
+						run = false;
+					}
+
+				var simulator = window.simulatorInstance;
+
+				// exit function when there is no more points
+				if (time > simulator.timeOut/4*10-2) 
+					{
+						run = true;
+						return;
+					}
+				else time++;
+						
+				setTimeout(move1(simulator.pointsY[time], simulator.pointsX[time], simulator.angleR[time]), 20);
+
+					console.log("test X: ", simulator.pointsX[time]);
+					console.log("test Y: ", simulator.pointsY[time]);
+					console.log("test R: ", simulator.angleR[time],"\n\n");
+
+			}
+		
+			function move1(x, y, degree){
+			
+				setPosition(currentCar, x, 0.2, y);
+				rotateCar(currentCar, degree);
+				setTimeout(move, 20);
 			}
 			
-			/**
-			 * 3D Visualization API
-			 * -> Websocket HTML5
-			 * Client Part
-			 */
-
-
-
-			// Handle incoming messages
-
-			    //console.log(msg);
-				// parse the message data back into JSON
-				//var data = JSON.parse(msg.data);
-				//rotateCar(currentCar, data.angle);
-
-				// mapping of the data of x will map to z axis of Three.js
-				// data of y will map to x axis of Three.js
-			//	for (var i = 0; i < 1000; i++){
-
-			//};
 		</script>
 	</body>
 </html>
