Updated the acceleration algorithm of the car

--- a/index.html
+++ b/index.html
@@ -855,7 +855,7 @@
 				var simulator = window.simulatorInstance;
 
 				// exit function when there is no more points
-				if (time > simulator.timeOut/4*10-2) 
+				if (time > simulator.timeOut/5*10-2) // fpsTime = 0.5
 					{
 						run = true;
 						return;
