Updated fuction getDistancesFromSensors, added back left and right sensors, added logging from these sensors in the index file

--- a/index.html
+++ b/index.html
@@ -1110,8 +1110,12 @@
 
 				// console.log("Distance from FL : ",distances[0]);
 				// console.log("Distance from FR : ",distances[1]);
-				// console.log("Distance from SLF : ",distances[2]);
-				// console.log("Distance from SLB : ",distances[3]);
+				// console.log("Distance from FLS : ",distances[2]);
+				// console.log("Distance from BLS : ",distances[3]);
+				// console.log("Distance from FRS : ",distances[4]);
+				// console.log("Distance from BRS : ",distances[5]);
+				// console.log("Distance from BL : ",distances[6]);
+				// console.log("Distance from BR : ",distances[7]);
 
 				Module.setX(simulator.output.xi.value);
 				Module.setY(simulator.output.yi.value);
