Updated the calculation of the deviation algorithm

--- a/trajectoriesComparator.html
+++ b/trajectoriesComparator.html
@@ -91,7 +91,7 @@
 
         setTimeout(function()
             {
-                for(var i=0; i<jsonSimulationData1.telemetry.length-1; i++){
+                for(var i=0; i<jsonSimulationData1.telemetry.length; i++){
 
                     tempX1 = 800-jsonSimulationData1.telemetry[i].Position[0]*4.35;
                     tempY1 = 200+jsonSimulationData1.telemetry[i].Position[1]*4.35;
@@ -165,65 +165,102 @@
 
         var deviationSum = 0;
 
-        setTimeout(function()
-            {
-                // jsonSimulationData1 from TSC controller
-                for(var i=0; i<jsonSimulationData1.telemetry.length-1; i++){
+        // setTimeout(function()
+        //     {
+        //         // jsonSimulationData1 from TSC controller
+        //         for(var i=0; i<jsonSimulationData1.telemetry.length-1; i++){
 
-                    tempX1 = 800-jsonSimulationData1.telemetry[i].Position[0];
-                    tempY1 = 200+jsonSimulationData1.telemetry[i].Position[1];
+        //             tempX1 = 800-jsonSimulationData1.telemetry[i].Position[0];
+        //             tempY1 = 200+jsonSimulationData1.telemetry[i].Position[1];
 
-                    tempX0 = 800-jsonSimulationData.telemetry[i].Position[0];
-                    tempY0 = 200+jsonSimulationData.telemetry[i].Position[1];
+        //             tempX0 = 800-jsonSimulationData.telemetry[i].Position[0];
+        //             tempY0 = 200+jsonSimulationData.telemetry[i].Position[1];
 
-                    if(i > 2){
+        //             if(i > 2){
 
-                        tempXPrev2 = 800-jsonSimulationData.telemetry[i-2].Position[0];
-                        tempYPrev2 = 200+jsonSimulationData.telemetry[i-2].Position[1];
+        //                 tempXPrev2 = 800-jsonSimulationData.telemetry[i-2].Position[0];
+        //                 tempYPrev2 = 200+jsonSimulationData.telemetry[i-2].Position[1];
 
-                        tempXPrev = 800-jsonSimulationData.telemetry[i-1].Position[0];
-                        tempYPrev = 200+jsonSimulationData.telemetry[i-1].Position[1];
+        //                 tempXPrev = 800-jsonSimulationData.telemetry[i-1].Position[0];
+        //                 tempYPrev = 200+jsonSimulationData.telemetry[i-1].Position[1];
 
-                        tempXNext = 800-jsonSimulationData.telemetry[i+1].Position[0];
-                        tempYNext = 200+jsonSimulationData.telemetry[i+1].Position[1];
+        //                 tempXNext = 800-jsonSimulationData.telemetry[i+1].Position[0];
+        //                 tempYNext = 200+jsonSimulationData.telemetry[i+1].Position[1];
 
-                        tempXNext2 = 800-jsonSimulationData.telemetry[i+2].Position[0];
-                        tempYNext2 = 200+jsonSimulationData.telemetry[i+2].Position[1];
+        //                 tempXNext2 = 800-jsonSimulationData.telemetry[i+2].Position[0];
+        //                 tempYNext2 = 200+jsonSimulationData.telemetry[i+2].Position[1];
 
-                        tempXNext3 = 800-jsonSimulationData.telemetry[i+3].Position[0];
-                        tempYNext3 = 200+jsonSimulationData.telemetry[i+3].Position[1];
+        //                 tempXNext3 = 800-jsonSimulationData.telemetry[i+3].Position[0];
+        //                 tempYNext3 = 200+jsonSimulationData.telemetry[i+3].Position[1];
 
-                        tempXNext4 = 800-jsonSimulationData.telemetry[i+4].Position[0];
-                        tempYNext4 = 200+jsonSimulationData.telemetry[i+4].Position[1];
+        //                 tempXNext4 = 800-jsonSimulationData.telemetry[i+4].Position[0];
+        //                 tempYNext4 = 200+jsonSimulationData.telemetry[i+4].Position[1];
 
-                        var deviationPrev2 = Math.sqrt(Math.pow((tempX1 - tempXPrev2), 2) + Math.pow((tempY1 - tempYPrev2), 2));
-                        var deviationPrev = Math.sqrt(Math.pow((tempX1 - tempXPrev), 2) + Math.pow((tempY1 - tempYPrev), 2));
-                        var deviationNext = Math.sqrt(Math.pow((tempX1 - tempXNext), 2) + Math.pow((tempY1 - tempYNext), 2));
-                        var deviationNext2 = Math.sqrt(Math.pow((tempX1 - tempXNext2), 2) + Math.pow((tempY1 - tempYNext2), 2));
-                        var deviationNext3 = Math.sqrt(Math.pow((tempX1 - tempXNext3), 2) + Math.pow((tempY1 - tempYNext3), 2));
-                        var deviationNext4 = Math.sqrt(Math.pow((tempX1 - tempXNext4), 2) + Math.pow((tempY1 - tempYNext4), 2));
-                        var deviationNorm = Math.sqrt(Math.pow((tempX1 - tempX0), 2) + Math.pow((tempY1 - tempY0), 2));
+        //                 var deviationPrev2 = Math.sqrt(Math.pow((tempX1 - tempXPrev2), 2) + Math.pow((tempY1 - tempYPrev2), 2));
+        //                 var deviationPrev = Math.sqrt(Math.pow((tempX1 - tempXPrev), 2) + Math.pow((tempY1 - tempYPrev), 2));
+        //                 var deviationNext = Math.sqrt(Math.pow((tempX1 - tempXNext), 2) + Math.pow((tempY1 - tempYNext), 2));
+        //                 var deviationNext2 = Math.sqrt(Math.pow((tempX1 - tempXNext2), 2) + Math.pow((tempY1 - tempYNext2), 2));
+        //                 var deviationNext3 = Math.sqrt(Math.pow((tempX1 - tempXNext3), 2) + Math.pow((tempY1 - tempYNext3), 2));
+        //                 var deviationNext4 = Math.sqrt(Math.pow((tempX1 - tempXNext4), 2) + Math.pow((tempY1 - tempYNext4), 2));
+        //                 var deviationNorm = Math.sqrt(Math.pow((tempX1 - tempX0), 2) + Math.pow((tempY1 - tempY0), 2));
 
-                        // console.log( " deviationPrev: ",deviationPrev,
-                        //              " deviationNext: ",deviationNext,
-                        //              " deviationNext2: ",deviationNext2,
-                        //              " deviationNext3: ",deviationNext3,
-                        //              " deviationNext4: ",deviationNext4,
-                        //              " deviationNorm: ",deviationNorm);
+        //                 // console.log( " deviationPrev: ",deviationPrev,
+        //                 //              " deviationNext: ",deviationNext,
+        //                 //              " deviationNext2: ",deviationNext2,
+        //                 //              " deviationNext3: ",deviationNext3,
+        //                 //              " deviationNext4: ",deviationNext4,
+        //                 //              " deviationNorm: ",deviationNorm);
 
-                        deviationSum += Math.min(deviationNext, deviationNext2, deviationNext3,
-                                                     deviationNext4, deviationNorm, deviationPrev, deviationPrev2);
+        //                 deviationSum += Math.min(deviationNext, deviationNext2, deviationNext3,
+        //                                              deviationNext4, deviationNorm, deviationPrev, deviationPrev2);
 
-                    } else 
-                        deviationSum += Math.sqrt(Math.pow((tempX1 - tempX0), 2) + Math.pow((tempY1 - tempY0), 2)); 
-                }
-            }
-        ,50);
+        //             } else 
+        //                 deviationSum += Math.sqrt(Math.pow((tempX1 - tempX0), 2) + Math.pow((tempY1 - tempY0), 2)); 
+        //         }
+        //     }
+        // ,50);
 
         setTimeout(function(){
-            console.log("Deviation : ", (deviationSum/distBetweenPointsSum)*100);
+
+            var arrayAreas = Array();
+            var areasSum = 0;
+
+            for(var i = 0; i < jsonSimulationData1.telemetry.length-1; i++){
+
+                // TSC controller data, Position[0] = x, Position[1] = y
+                var tscX = jsonSimulationData1.telemetry[i].Position[0];
+                var tscY = jsonSimulationData1.telemetry[i].Position[1];
+
+                var tscXN = jsonSimulationData1.telemetry[i + 1].Position[0];
+                var tscYN = jsonSimulationData1.telemetry[i + 1].Position[1];
+
+                // EMA controller data, Position[0] = x, Position[1] = y
+                var enaX = jsonSimulationData.telemetry[i].Position[0];
+                var enaY = jsonSimulationData.telemetry[i].Position[1];
+
+                var enaXN = jsonSimulationData.telemetry[i + 1].Position[0];
+                var enaYN = jsonSimulationData.telemetry[i + 1].Position[1];
+
+                arrayAreas.push(Math.sqrt(Math.pow((tscXN - tscX), 2) + Math.pow((tscYN - tscY), 2)) * 0.5 *
+                    (
+                        Math.sqrt(
+                            Math.pow((enaX - tscX), 2) + Math.pow((enaY - tscY), 2)
+                        ) +
+                        Math.sqrt(
+                            Math.pow((enaXN - tscXN), 2) + Math.pow((enaYN - tscYN), 2)
+                        )
+                    ));
+
+                areasSum += arrayAreas[i];
+
+                //console.log("Area between points[",i,"] : ",arrayAreas[i]);
             }
+
+            console.log("Optimal trajectory distance : ", distBetweenPointsSum1); // TSC controller 
+            console.log("Deviation : ", areasSum/distBetweenPointsSum1);
+        }
         , 100);
+
 
     </script>
 </body>
