--- a/testSender.html
+++ b/testSender.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="js-libs/jszip.min.js"></script>
+        <!-- <script src="http://cdn.jsdelivr.net/g/filesaver.js"></script> -->
     </head>
 <body>
     <div class="result">
@@ -31,17 +32,31 @@
     var zipContainer = new JSZip();
     zipContainer.file("telemetry-log.txt", fileData);
 
-    zipContainer.generateAsync({type:"base64"}).then(function (content) {
+    zipContainer.generateAsync({type:"blob"}).then(function (content) {
 
-        $.post("http://127.0.0.1:7070/example/", content, function(data) {
-        $(".result").html(data); 
-        });
+        // First way of sending data
+        // var xmlHttpRequest = new XMLHttpRequest();
+        // var file = fileData;
+        // var fileName = "telemetry-log.zip";
+        // var target = "http://127.0.0.1:7070/example/";
+        // var mimeType = "multipart/form-data";
+        // xmlHttpRequest.open('POST', target, true);
+        // xmlHttpRequest.setRequestHeader('Content-Type', mimeType);
+        // xmlHttpRequest.setRequestHeader('Content-Disposition', 'attachment; filename="' + fileName + '"');
+        // xmlHttpRequest.send(file);
+
+        // Second way to send
+        // $.post("http://127.0.0.1:7070/example/", content, function(data) {
+        // $(".result").html(data); 
+        // });
+
+        //saveAs(content, "example.zip");
 
         // another way to send the row data to the server
-        // var blob = new Blob([content], {type: 'application/octet-binary'});
-        // var xhr = new XMLHttpRequest();
-        // xhr.open("POST", 'http://127.0.0.1:7070/example/', true);
-        // xhr.send(blob);
+        var blob = new Blob([content], {type: 'application/octet-binary'});
+        var xhr = new XMLHttpRequest();
+        xhr.open("POST", 'http://127.0.0.1:7070/example/', true);
+        xhr.send(blob);
     });
     
     </script>
