Error with paths fixed

--- a/selfdrivingcar/simulatorWithTrajectory.html
+++ b/selfdrivingcar/simulatorWithTrajectory.html
@@ -20,8 +20,8 @@
     </head>
 <body>
     <div class="box">
-          <div class="box1"><iframe id="sim" src="http://0.0.0.0:8000/index.html" height="700" frameborder="0" scrolling="no" width="700" align="left"></iframe></div>
-          <div class="box1"><iframe src="http://0.0.0.0:8000/trajectoryComparatorNoise.html" height="900" frameborder="0" scrolling="no" width="1600" align="right"></iframe></div>
+          <div class="box1"><iframe id="sim" src="index.html" height="700" frameborder="0" scrolling="no" width="700" align="left"></iframe></div>
+          <div class="box1"><iframe src="trajectoryComparatorNoise.html" height="900" frameborder="0" scrolling="no" width="1600" align="right"></iframe></div>
     </div>
     <div>
         <!-- <button onclick="getSimulationLog()">Read simulation data</button> -->
