--- a/selfdrivingcar/simulatorWithTrajectory.html
+++ b/selfdrivingcar/simulatorWithTrajectory.html
@@ -13,7 +13,7 @@
             }
             .box {
                 min-width:2300px;
-                width: auto !important;
+                /* width: auto !important; */
                 width:2300px;
             }
         </style>
