--- a/ideIntegration.html
+++ b/ideIntegration.html
@@ -21,13 +21,13 @@
 <body>
     <div class="box">
 
-        <iframe id="ide" src="onlineIDE/api/load.html?mountPoint=/" height="900" frameborder="0" scrolling="no" width="900"></iframe>
+        <iframe id="ide" src="onlineIDE/api/load.html?mountPoint=/" height="900" frameborder="0" scrolling="no" width="1200"></iframe>
 
     </div>
     </div>
     <div>
         <button onclick="readAllFiles()">Read all files</button>
-        <button onclick="appendFile()">Append test file</button>
+        <button onclick="appendTestModel()">Append test file</button>
     </div>
     <script>
 
@@ -59,11 +59,35 @@
                     });
         }
 
-        function appendFile(){
-            document.getElementById("ide").contentWindow.api.fs.appendFile('/testFile.emam',"some data",function (err, data) {
+        function appendFile(fileName,fileContent){
+            document.getElementById("ide").contentWindow.api.fs.appendFile(fileName,fileContent,function (err, data) {
             if (err) throw err;
             });
         }
+
+        function readFileFromDisk(file) {
+            var rawFile = new XMLHttpRequest();
+            var text;
+            rawFile.open("GET", file, false);
+            rawFile.onreadystatechange = function () {
+                if (rawFile.readyState === 4) {
+                    if (rawFile.status === 200 || rawFile.status == 0) {
+                        text = rawFile.responseText;
+                    }
+                }
+            }
+            rawFile.send(null);
+            return text;
+        }
+        
+        function appendTestModel(){
+            appendFile("MainController.emam", readFileFromDisk("simulator1/MainController.emam"));
+            appendFile("ConstantVelocity.emam", readFileFromDisk("simulator1/ConstantVelocity.emam"));
+            appendFile("SteeringControl.emam", readFileFromDisk("simulator1/SteeringControl.emam"));
+            appendFile("GameOverTrigger.emam", readFileFromDisk("simulator1/GameOverTrigger.emam"));
+        }
+
+
     </script>
 </body>
 </html>
