Added a button to open the simulator

--- a/ideIntegration.html
+++ b/ideIntegration.html
@@ -29,6 +29,7 @@
         <button onclick="showContent()">Show Content</button>
         <button onclick="packData()">Pack Data</button>
         <button onclick="sendData()">Send Data</button>
+        <input type="button"  value="Open Simulator" onclick="window.open('index.html','_blank','resizable=yes')"/>
     </div>
     <script>
 
